PROJECT(ThreadSafeHashTable)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
#ADD_DEFINITIONS(-D__DEBUG_NODE__)
ADD_DEFINITIONS(-Wall -O3 -std=c++11)
INCLUDE_DIRECTORIES(./)
ADD_EXECUTABLE(testList ./test/testList.cpp)
ADD_EXECUTABLE(testHashTable ./test/testHashTable.cpp)
TARGET_LINK_LIBRARIES(testList pthread)
TARGET_LINK_LIBRARIES(testHashTable pthread)